# TypstDrive

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  svelte.config.js  vite.config.ts
server/: Cargo.toml
server/src/: admin.rs  api_keys.rs  auth.rs  collab.rs  compiler.rs  db.rs  docs.rs  files.rs  folders.rs  handlers.rs  main.rs  models.rs  packages.rs  public_api.rs  setup.rs  spaces.rs  world.rs
server/src/db/: mod.rs  postgres.rs  sqlite.rs
src/: app.css
src/lib/components/: CommentsSidebar.svelte  DocFooter.svelte  Editor.svelte  ErrorBanner.svelte  Footer.svelte  PageSettingsModal.svelte  PresentationMode.svelte  Preview.svelte  PublishPackageModal.svelte  ShareModal.svelte  ThemePicker.svelte  Toolbar.svelte  VersionHistorySidebar.svelte
src/lib/components/dashboard/: CreateDocModal.svelte  CreateFolderModal.svelte  CreateSpaceModal.svelte  DeleteModal.svelte  DocCard.svelte  FileCard.svelte  FolderRow.svelte  InfoModal.svelte  Navbar.svelte  RenameModal.svelte  SpaceCard.svelte
src/lib/components/space/: FileTree.svelte  SpaceToolbar.svelte
src/lib/ts/: auth.ts  store.ts  themes.ts  typst-api.ts  yjs-setup.ts  yjs-space.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/api-docs/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/doc/[id]/: +page.svelte
src/routes/login/: +page.svelte
src/routes/register/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/setup/: +page.svelte
src/routes/space/[id]/: +page.svelte
src/routes/spaces/: +page.svelte
